# OS_Lab1_Virtual_memory_system

./: .gitignore  CMakeLists.txt  README.md
include/: Application.hpp  Kernel.hpp  MemoryManagmentUnit.hpp  PageTableEntry.hpp  PhysPage.hpp  Process.hpp
src/: Application.cpp  CMakeLists.txt  PageTableEntry.cpp  PhysPage.cpp
